--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
     }
 }
 
